Persist drafts through composer flows